<resources>
    <string name="app_name">MunicipalityEvents</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="signup">Registrarse</string>
    <string name="country">Nacionalidad</string>
    <string name="surname">Apellido</string>
    <string name="name">Nombre</string>
    <string name="password">Contraseña</string>
    <string name="email">Email</string>
    <string name="date">Fecha de nacimiento</string>
    <string name="signIn">Iniciar sesión</string>
    <string name="signUp">Registro</string>
    <string name="passwordText">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="forgotpassword">¿Olvidó su contraseña?</string>
    <string name="signupLogin">¿Aún no es usuario? Registrarse </string>
    <string name="btn_profile">Comprar entradas</string>
</resources>

