<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment"
    android:orientation="vertical"
    android:background="#0288d1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:id="@+id/textview_signup"
        android:text="@string/signUp"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:layout_margin="10dp"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:layout_margin="10dp"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:layout_margin="10dp"
        android:hint="@string/name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPersonName"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:layout_margin="10dp"
        android:hint="@string/surname"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPersonName"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:layout_margin="10dp"
        android:hint="@string/date"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="date"
        android:clickable="false"
        android:focusable="false" />

    <EditText
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:padding="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:layout_margin="10dp"
        android:hint="@string/country"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPersonName" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_signup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="130dp"
        android:text="@string/signup"
        android:backgroundTint="@color/white"
        android:textColor="#03a9f4"/>


</LinearLayout>