<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0288d1"
    tools:context=".LoginFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:id="@+id/signin"
        android:text="@string/signIn"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:layout_below="@+id/signin"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@+id/email"
        android:hint="@string/passwordText"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:inputType="textPassword"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:layout_below="@+id/password"
        android:text="@string/login"
        android:backgroundTint="@color/white"
        android:textColor="#03a9f4"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/navButtonSignUp"
        android:layout_below="@id/loginButton"
        android:text="@string/signupLogin"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>

</RelativeLayout>